--- a/assignments/htmlassignment1.html
+++ b/assignments/htmlassignment1.html
@@ -9,7 +9,7 @@
 <body>
     <div style="padding-bottom: 30px;">
         <div style="background-color: white; width: 70%; margin: 0 15%; border-radius: 10px;">
-            <h1>EventLog</h1>
+            <h1>EDO-LOG</h1>
         </div>
         <div class="imgContainer" >
             <img src="https://img.freepik.com/free-photo/african-student-female-posed-with-backpack-school-items-yard-university-against-flags-different-countries_627829-5968.jpg?t=st=1733387180~exp=1733390780~hmac=3a8b5db934c98771495a798c0a77bd0f41e7db279d8456fec0c36c7c96d3de92&w=740" alt="Edo State" class="img img1" style="height: 400px; width: 80%; max-width: 85%;">
