add imges in the HTML and style images in CSS

--- a/code/html-assignment-1/index.html
+++ b/code/html-assignment-1/index.html
@@ -21,6 +21,11 @@
       <li>World Stage: The performance also made him the first South African to win the Olympic gold medal in the 400 meters and the first athlete to break a world record in the event since 1999.</li>
      </ul>
     <p>Van Niekerk's <a href="https://en.wikipedia.org/wiki/400_metres#Men_(outdoor)">world record in the 400 meters</a> remains one of the most iconic moments in track and field history, showcasing a perfect combination of speed, endurance, and tactical brilliance.</p>
+    <div id="wayde-div">
+      <img class="wayde-img" src="../images/Wayde-van-Niekerk-world-record-2016.jpg" alt="Wayde van Niekerk standing next to screen showing world record at 2016 Olympics">
+      <img class="wayde-img" src="../images/vanN.jpg" alt="Wayde van Niekerk holding South African Flag at 2016 Olympics after winning the 400m final">
+      <img class="wayde-img" src="../images/wayde.jpg" alt="Wayde van Niekerk holdign his gold medal at 2016 Olympics">
+    </div>
 </div>
 
 <div class="section-div">
@@ -37,6 +42,12 @@
   </ol>
 
   <p>Each of these victories is not only a sporting achievement but also a symbol of the nation's resilience and unity, reflecting South Africa's growth and strength over time.</p>
+
+  <div id="rwc-div">
+    <img class="rwc-img" src="../images/1995_RWC.jpeg" alt="Nelson Mandela and Francois Pienaar with the 1995 RWC trophy" title="1995 RWC">
+    <img class="rwc-img" src="../images/2007_RWC.jpg" alt="Thabo Mbeki and John Smith with the 2007 RWC trophy" title="2007 RWC">
+    <img class="rwc-img" src="../images/2023_RWC.jpg" alt="Siya Kolisi holding the 2023 RWC trophy with the SA squad" title="2023 RWC">
+  </div>
 </div>
 
 </body>
