--- a/code/html-assignment-1/index.html
+++ b/code/html-assignment-1/index.html
@@ -13,12 +13,12 @@
   
 <div class="section-div">
   <h3>Wayde van Niekerk - 400m at 2016 Rio Olympics</h3>
-    <p>On August 14, 2016, <a href="https://en.wikipedia.org/wiki/Wayde_van_Niekerk">van Niekerk</a> ran the race in an astonishing 43.03 seconds, breaking the previous world record of 43.18 seconds held by <a href="https://en.wikipedia.org/wiki/Michael_Johnson_(sprinter)">Michael Johnson</a> since 1999.</p>
+    <p>On 14 August 2016 <a href="https://en.wikipedia.org/wiki/Wayde_van_Niekerk">van Niekerk</a> ran the race in an astonishing 43.03 seconds, breaking the previous world record of 43.18 seconds held by <a href="https://en.wikipedia.org/wiki/Michael_Johnson_(sprinter)">Michael Johnson</a> since 1999.</p>
     <p>Van Niekerk's performance was historic for several reasons:</p>
      <ul>
-      <li>The Race Strategy: Van Niekerk ran the race in an unconventional way. He started in lane 8, which is typically considered an outside lane with a disadvantage in terms of sighting other competitors but that didn't derail him. He was also known for running the final 100 meters incredibly fast, a part of the race where many athletes start to tire and indeed he showed this as he ran to victory. </li>
-      <li>The Split: His splits were impressive, he ran the first 200 meters in 21.60 seconds and finished strong in the final stretch, closing with one of the fastest finishes in the history of the event. This aggressive strategy, coupled with his stamina and sprinting capabilities, contributed to his record-breaking time.</li>
-      <li>World Stage: The performance also made him the first South African to win the Olympic gold medal in the 400 meters and the first athlete to break a world record in the event since 1999.</li>
+      <li><b>The Race Strategy</b>: Van Niekerk ran the race in an unconventional way. He started in lane 8, which is typically considered an outside lane with a disadvantage in terms of sighting other competitors but that didn't derail him. He was also known for running the final 100 meters incredibly fast, a part of the race where many athletes start to tire and indeed he showed this as he ran to victory. </li>
+      <li><b>The Split</b>: His splits were impressive, he ran the first 200 meters in 21.60 seconds and finished strong in the final stretch, closing with one of the fastest finishes in the history of the event. This aggressive strategy, coupled with his stamina and sprinting capabilities, contributed to his record-breaking time.</li>
+      <li><b>World Stage</b>: The performance also made him the first South African to win the Olympic gold medal in the 400 meters and the first athlete to break a world record in the event since 1999.</li>
      </ul>
     <p>Van Niekerk's <a href="https://en.wikipedia.org/wiki/400_metres#Men_(outdoor)">world record in the 400 meters</a> remains one of the most iconic moments in track and field history, showcasing a perfect combination of speed, endurance, and tactical brilliance.</p>
     <div id="wayde-div">
