--- a/code/HTML Assignment-1/index.html
+++ b/code/HTML Assignment-1/index.html
@@ -10,15 +10,16 @@
     <title>The Wonders of the Northern Lights - Nature's Magic</title>
 </head>
 <body>
-    <div class="container">
+    <header>
         <h1>The Wonders of the Northern Lights <span>Experience the Magic of Nature’s Light Show</span></h1>
-        <hr>
-        <div class="container--div text-cont">
+    </header>
+    <div class="main">
+        <div class="main text-cont">
             <h2>What Are the Northern Lights?</h2>
             <p>The Northern Lights are a spectacular display of light in the sky caused by charged particles from the Sun colliding with Earth's atmosphere. These lights are often visible in high-latitude regions such as Norway, Sweden, Finland, Canada, and Alaska.</p>
         </div>
 
-        <div class="container--div text-cont">
+        <div class="main--div text-cont">
             <h2>Why Are They So Magical?</h2>
             <ul>
                 <li><span>Colors:</span> The Northern Lights paint the sky in shades of green, pink, purple, and blue.</li>
@@ -27,7 +28,7 @@
             </ul>
         </div>
 
-        <div class="container--div text-cont">
+        <div class="main--div text-cont">
             <h2>Best Locations to See the Northern Lights</h2>
             <ol>
                 <li>Tromsø, Norway</li>
@@ -37,13 +38,14 @@
                 <li>Kiruna, Sweden</li>
             </ol>
         </div>
-
-        <div class="container--div text-cont">
-            <h2>Fun Fact</h2>
-            <p>Did you know that there's also a Southern Lights counterpart called the Aurora Australis, visible in the Southern Hemisphere?</p>
+        <div id="fun">
+            <div class="main--div text-cont">
+                <h2>Fun Fact</h2>
+                <p>Did you know that there's also a Southern Lights counterpart called the Aurora Australis, visible in the Southern Hemisphere?</p>
+            </div>
         </div>
 
-        <div class="container--div text-cont">
+        <div class="main--div text-cont">
             <h2>Plan Your Northern Lights Adventure</h2>
             <ul class="tour">
                 <li><a href="#">Book a tour to see the Northern Lights</a></li>
@@ -51,7 +53,7 @@
             </ul>
         </div>
 
-        <div class="container--div img-cont">
+        <div class="main--div img-cont">
             <h2>Gallery</h2>
             <div class="gallary">
                 <div class="gallary--img">
@@ -78,5 +80,8 @@
             </div>
         </div>
     </div>
+    <footer>
+        <p>&copy; 2024 Augustine Stephen Abah. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
