refractor(folder): rename directories to suit curriculum

--- a/code/00_html/index.html
+++ b/code/00_html/index.html
@@ -32,6 +32,26 @@
          <a href="./index.html">Go Home</a>
 
          <!-- Image Tag -->
+          <img src="ttps://upload.wikimedia.org/wikipedia/commons/thumb/7/74/Martin_Garrix_%40_Web_Summit_2017.jpg/640px-Martin_Garrix_%40_Web_Summit_2017.jpg" alt="Image of Martin Garrix">
+
+        <!-- Nested Elements -->
+            <!-- lists -->
+                <!-- Ordered list -->
+                <ol type="A">
+                    <li>Thing one</li>
+                    <li>Thing two</li>
+                    <li>Thing three</li>
+                </ol>
+
+                <!-- Un-ordered list -->
+                <ul>
+                    <li>Thing one</li>
+                    <li>Thing two</li>
+                    <li>Thing three</li>
+                </ul>
+
+
+
         <script src="" async defer></script>
     </body>
 </html>
