--- a/Code/HTML Prac/htmp_basics.html
+++ b/Code/HTML Prac/htmp_basics.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css_basics.css">
     <style>
         .A {
-            background-color: black;
+            background-color: rgb(5, 78, 56);
         }
         .B {
             display: flex;
