--- a/code/html-css assignment/assignment.html
+++ b/code/html-css assignment/assignment.html
@@ -15,8 +15,7 @@
     <main> 
         <section id="location">
             <h3>About the River Niger</h3>
-            <p>The River Niger is primarily located in Nigeria. It flows through several other countries, including Guinea, Mali, Niger, and 
-                finally reaches Nigeria, where it empties into the Atlantic Ocean. 
+            <p>The River Niger is primarily located in Nigeria.
                 It is the longest river in West Africa and the second-longest in Africa, after the Nile.</p>
             <p>Interestingly, Nigeria got its name from the River Niger. Mrs. Flora Shaw Lugard, a British journalist and wife of the 
                 first Governor-General of Nigeria, Lord Lugard, coined the name "Nigeria" 
@@ -26,11 +25,7 @@
         <section id="formation">
             <h3>Formation of the Niger Delta</h3>
             <p>The Niger Delta is formed as a result of the inflow of the River Niger into the Atlantic Ocean. 
-                As the river reaches its mouth, it slows down and deposits large amounts of sediment that it has carried from upstream, 
-                including silt, sand, and clay.</p>
-            <p>The Niger Delta is rich in biodiversity, creating fertile soil that supports agriculture, as well as being an important ecological zone. 
-                Despite the challenges posed by human activities, such as oil exploration, 
-                the Niger Delta remains a vital region for Nigeria's economy and natural resources.</p>
+                The Niger Delta region is a vital region for Nigeria's economy due the abundance of oil and gas.</p>
             <h3>Images of the Niger Delta</h3>
              <img src="images/pexels-safari-consoler-3290243-25230862.jpg" alt="Niger Delta" width="300" height="300">
              <img src="images/pexels-olamide-2933092.jpg" alt="Niger Delta" width="300" height="300">
@@ -55,7 +50,11 @@
             <h3>Visit the River Niger</h3>
             <p>Learn more about the River Niger on its <a href="https://en.wikipedia.org/wiki/Niger_River" target="_blank">Wikipedia page</a>.</p>
         </section>
-    
     </main>
+
+    <footer id="footer">
+        <p>&copy; 2024 River Niger Exploration | All Rights Reserved</p>
+    </footer>
+    
 </body>
 </html>
