--- a/code/02_css/03_colors_/index.html
+++ b/code/02_css/03_colors_/index.html
@@ -6,10 +6,16 @@
         <title>Colors and Sizes</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
-        <link rel="stylesheet" type="text/css" href="">
+        <link rel="stylesheet" type="text/css" href="./index.html">
         <link rel="icon" type="image/x-icon" href="">
     </head>
     <body>
+
+
+
+
+
+
 
 
 
