--- a/code/02_css/03_colors_/index.html
+++ b/code/02_css/03_colors_/index.html
@@ -6,10 +6,24 @@
         <title>Colors and Sizes</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
-        <link rel="stylesheet" type="text/css" href="./index.html">
+        <link rel="stylesheet" type="text/css" href="./main.css">
         <link rel="icon" type="image/x-icon" href="">
     </head>
     <body>
+        <div class="wrapper">
+            <div class="box" id="one">1</div>
+            <div class="box" id="two">2</div>
+            <div class="box" id="three">3</div>
+            <div class="box" id="four">4</div>
+            <div class="box" id="five">5</div>
+            <div class="box" id="six">6</div>
+            <div class="box" id="seven">7</div>
+            <div class="box" id="eight">8</div>
+        </div>
+
+
+    
+        
 
 
 
