Revert "Updated html / css assignment"

--- a/ncode/assignment.html
+++ b/ncode/assignment.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Html Assignment</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assignment.css">
 </head>
 <body>
     <h1> The Hustle that keeps on Bustling </h1>
@@ -42,19 +42,19 @@
     </div>
     <div class="city">
         <div  class="flex-container">
-            <div class="flex-item-left"><a href="#"><img src="./imagesf/brd.jpg"></a></div>
-            <div class="flex-item-left"><a href="#"><img src="./imagesf/hb.jpg"></a></div>
-            <div class="flex-item-left"><a href="https://www.tesla.com"><img src="./imagesf/diff.jpg"></a></a></div>
+            <div class="flex-item-left"><img src="imagesf/brd.jpg"></div>
+            <div class="flex-item-left"><img src="imagesf/hb.jpg"></div>
+            <div class="flex-item-left"><img src="imagesf/diff.jpg"></div>
         </div>
         <div  class="flex-container">
-            <div class="flex-item-left"><a href="#"><img src="./imagesf/ch.jpg"></a></div>
-            <div class="flex-item-left"><a href="#"><img src="./imagesf/eg.jpg"></a></div>
-            <div class="flex-item-left"><a href="#"><img src="./imagesf/gc.jpg"></a></div>
+            <div class="flex-item-left"><img src="imagesf/ch.jpg"></div>
+            <div class="flex-item-left"><img src="imagesf/eg.jpg"></div>
+            <div class="flex-item-left"><img src="imagesf/gc.jpg"></div>
         </div>
         <div  class="flex-container">
-            <div class="flex-item-left"><a href="amazon.com"><img src="./imagesf/amz.jpg" alt="amazon"></a></div>
-            <div class="flex-item-left"><a href="https://www.manchestereveningnews.co.uk/all-about/manchester-united-fc"><img src="./imagesf/mcu.jpg" alt="man u"></a></div>
-            <div class="flex-item-left"><a href="#"><img src="./imagesf/lg.jpg"></a></div>
+            <div class="flex-item-left"><img src="imagesf/amz.jpg"></div>
+            <div class="flex-item-left"><img src="imagesf/mcu.jpg"></div>
+            <div class="flex-item-left"><img src="imagesf/lg.jpg"></div>
         </div>
     </div>
 
