feat: add css grid

--- a/code/02_css/02_grid/index.html
+++ b/code/02_css/02_grid/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="font-size: 100px;">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +10,15 @@
         <link rel="icon" type="image/x-icon" href="">
     </head>
     <body>
+        <div class="grid"> 
+            <div class="grid__box" id="one">1</div>
+            <div class="grid__box" id="two">2</div>
+            <div class="grid__box" id="three">3</div>
+            <div class="grid__box" id="four">4</div>
+            <div class="grid__box" id="five">5</div>
+            <div class="grid__box" id="six">6</div>
+            <div class="grid__box" id="seven">7</div>
+        </div>
 
 
         
