--- a/code/02_css/media-query-responsive-design/index.html
+++ b/code/02_css/media-query-responsive-design/index.html
@@ -6,15 +6,35 @@
         <title>Responsive Design</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
-        <link rel="stylesheet" type="text/css" href="">
+        <link rel="stylesheet" type="text/css" href="./main.css">
         <link rel="icon" type="image/x-icon" href="">
     </head>
     <body>
 
+        <div class="box">
+            <div class="box__items">01</div>
+            <div class="box__items">02</div>
+            <div class="box__items">03</div>
+            <div class="box__items">04</div>
+            <div class="box__items">05</div>
+            <div class="box__items">06</div>
+            <div class="box__items">07</div>
+            <div class="box__items">08</div>
+        </div>
 
 
 
-        
+
+
+
+
+
+
+
+
+
+
+
         <script src="" async defer></script>
     </body>
 </html>
