changes on html assignment

--- a/Code/HTML Prac/htmp_basics.html
+++ b/Code/HTML Prac/htmp_basics.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css_basics.css">
     <style>
         .A {
+
             background-color: rgb(5, 78, 56);
         }
         .B {
@@ -67,7 +68,7 @@
 </head>
 <body>
     <div class="A">
-        <marquee behavior="scroll" direction="left">Its a new dawn in my country</marquee>
+        <marquee behavior="scroll" direction="left">Its a new day in my country</marquee>
     </div>
 
     <h1>A good tidings</h1>
