--- a/code/html-assignment/index.html
+++ b/code/html-assignment/index.html
@@ -28,7 +28,11 @@
 
         </ul>
         <img src="./img/Injera_with_eight_kinds_of_stew.jpg" alt="image of ingera">
-       </div>
+    </div>
+    <div class="images">
+        <img src="./img/ingera-kurt.jpeg" alt="injera kurt">
+        <img src="./img/injera-made.jpg" alt="ingera being made">
+    </div>
    <hr>
    <h2> Ingredients:</h2>
         <p> Traditionally, injera is made with just two ingredients: <i>teff flour and water.</i>
