changed color of link

--- a/code/html-assignment/index.html
+++ b/code/html-assignment/index.html
@@ -34,7 +34,7 @@
         <img src="./img/injera-made.jpg" alt="ingera being made">
     </div>
    <hr>
-   <h2> Ingredients:</h2>
+   <h2 id="ingredients"> Ingredients:</h2>
         <p> Traditionally, injera is made with just two ingredients: <i>teff flour and water.</i>
              Teff flour is ground from the grains of Eragrostis tef, also known as teff, a cereal crop from the Ethiopian Highlands.
               Teff production is limited to certain middle elevations with adequate rainfall and is a low-yield crop,
