--- a/code/html-assignment/index.html
+++ b/code/html-assignment/index.html
@@ -34,8 +34,9 @@
         <img src="./img/injera-made.jpg" alt="ingera being made">
     </div>
    <hr>
-   <h2 id="ingredients"> Ingredients:</h2>
-        <p> Traditionally, injera is made with just two ingredients: <i>teff flour and water.</i>
+   <div class="ingredients-par">
+   <h2 id="ingredients"> Ingredients: </h2>
+    <p> Traditionally, injera is made with just two ingredients: <i>teff flour and water.</i>
              Teff flour is ground from the grains of Eragrostis tef, also known as teff, a cereal crop from the Ethiopian Highlands.
               Teff production is limited to certain middle elevations with adequate rainfall and is a low-yield crop,
                so it is relatively expensive for the average farming household.
@@ -44,7 +45,7 @@
                   When teff is not available, injera is made by fermenting a variety of different grains, including barley, millet,
                    and sorghum. Teff, however, is the preferred grain for making injera, primarily because of its sensory
                     attributes (color, smell, taste). Teff flour is gluten-free. </p>
-    </main>
+  </div>  </main>
     <footer> For more info <a href="https://en.wikipedia.org/wiki/Injera"> <h2> Wikipedia - Ingera</h2></a></footer>
 </body>
 </html>
