--- a/code/1-html-css-flexbox/index.html
+++ b/code/1-html-css-flexbox/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="flex-parent">    
-         <div class="box">1</div>
-         <div class="box">2</div>
-         <div class="box">3</div>
+         <div class="box">ማክቤል</div>
+         <div class="box">እማ</div>
+         <div class="box">ኣባ</div>
          <div class="box">4</div>
          <div class="box">5</div>
          <div class="box">6</div>
