--- a/1-html-css/html-basic-tags.html
+++ b/1-html-css/html-basic-tags.html
@@ -3,36 +3,88 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>HTML basic elements</title>
+  <!-- Three ways of including CSS -->
+   <!-- least useful: inline CSS -->
+    <!-- middle useful: a style tag in the header -->
+     <!-- most useful: a linked external style sheet -->
+
+     <!-- this is where we WOULD put CSS styles -->
+   <style>
+    a:visited {
+      color: aqua;
+    }
+
+    a:hover {
+      color: aquamarine;
+    }
+   </style>
+
+   <link rel="stylesheet" href="css-basics.css">
 </head>
 <body>
+
+  <!--this is a comment, the browser will read it-->
+  <!--but not attempt to interpret it-->
+  
+
+
    <!--angle brackects-->
-   <!--html element-->
+   <!--html element, or html tag, delineated with angle brackets-->
    <h1>heading one</h1>
    <h2>heading two</h2>
-   <h6>heading six</h6>
+   <h6 class="orange-text">heading six</h6>
 
-   <p>paragraph</p>
+   <p class="gray-background">paragraph</p>
    <div>division</div>
    <span>span</span><span>another span</span><span>a third span</span>
-   <pre>pre-formatted</pre>
+   <pre class="orange-text gray-background">pre-formatted</pre>
 
    <!--an attribute change what the element does-->
    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">MDN Web Docs HTML Element Reference</a>
 
 
-   <img src="" alt="">
+   <!--img is an example of an empty tag, or void tag. Also called self closing tag -->
+
+    <!--horizontal rule-->
+   <hr />
 
 
-   
+    <img src="https://media.giphy.com/media/rIp49nsB14L7wVRAmc/giphy.gif?cid=790b7611seuujgao02q3xjoppkuar1296j87fpgw6vzq0596&ep=v1_gifs_search&rid=giphy.gif&ct=g" alt="this is going to be us">
+
+    <img 
+        style="border: 5px solid red;"
+    src="https://upload.wikimedia.org/wikipedia/commons/b/b7/Seehornsee_im_Herbst.jpg" alt="Seehornsee im Herbst.jpg" height="400" width="500"
+    
+
+    
 
 
 
-   
+    <hr>
 
+    <!-- these element types require nestling -->
 
-   
-   
+    <ol>
+      <li class="orange-text">thing 1</li>
+      <li>thing 2</li>
+      <li>thing 3</li>
+    </ol>
+
+    <ul>
+      <li>thing 1</li>
+      <li>thing 2</li>
+      <li class="orange-text">thing 3</li>
+    </ul>
+
+    <!-- we can also do any amount of nestling! -->
+     <div id="block-wrapper">
+      <h3 class="orange-text">This is a header inside a div!</h3>
+      <p>A paragraph usually won't have block elements inside it
+        but might have inline elements such as <span>span</span>
+        or <a href="">anchor tags</a>
+      </p>
+     </div>
 
 </body>
 </html>
