modify image source

--- a/code/css-assignment-3/index.html
+++ b/code/css-assignment-3/index.html
@@ -27,7 +27,7 @@
             <div id="gallery">
                 <div class="card right">
                     <img
-                        src="ocean.jpg"
+                        src="../images/ocean.jpg"
                         alt="aerial shot of islands from the sea"
                     />
                     <span class="photo-label">
@@ -37,7 +37,7 @@
                 </div>
                 <div class="card">
                     <img
-                        src="ocean.jpg"
+                        src="../images/ocean.jpg"
                         alt="aerial shot of islands from the sea"
                     />
                     <span class="photo-label">
@@ -47,7 +47,7 @@
                 </div>
                 <div class="card right">
                     <img
-                        src="ocean.jpg"
+                        src="../images/ocean.jpg"
                         alt="aerial shot of islands from the sea"
                     />
                     <span class="photo-label">
@@ -57,7 +57,7 @@
                 </div>
                 <div class="card">
                     <img
-                        src="ocean.jpg"
+                        src="../images/ocean.jpg"
                         alt="aerial shot of islands from the sea"
                     />
                     <span class="photo-label">
@@ -67,7 +67,7 @@
                 </div>
                 <div class="card right">
                     <img
-                        src="ocean.jpg"
+                        src="../images/ocean.jpg"
                         alt="aerial shot of islands from the sea"
                     />
                     <span class="photo-label">
@@ -77,7 +77,7 @@
                 </div>
                 <div class="card">
                     <img
-                        src="ocean.jpg"
+                        src="../images/ocean.jpg"
                         alt="aerial shot of islands from the sea"
                     />
                     <span class="photo-label">
@@ -87,7 +87,7 @@
                 </div>
                 <div class="card right">
                     <img
-                        src="ocean.jpg"
+                        src="../images/ocean.jpg"
                         alt="aerial shot of islands from the sea"
                     />
                     <span class="photo-label">
@@ -97,7 +97,7 @@
                 </div>
                 <div class="card">
                     <img
-                        src="ocean.jpg"
+                        src="../images/ocean.jpg"
                         alt="aerial shot of islands from the sea"
                     />
                     <span class="photo-label">
