--- a/code/3-html-css-grid/index.html
+++ b/code/3-html-css-grid/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Css-colors</title>
-</head>
-<body>
-    <h1> CSS Colors, Flex , Practice</h1>
-<div class="big-box">
-    <div class="box">1</div>
-    <div class="box">2</div>
-    <div class="box">3</div>
-    <div class="box">4</div>
-    <div class="box">5</div>
-    <div class="box">6</div>
-    <div class="box">7</div>
-    <div class="box">8</div>
-</div>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>CSS Grid Challenge</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <!-- DO NOT CHANGE ANYTHING IN THIS FILE -->
+        <div id="wrapper">
+            <header id="header">Page Header</header>
+            <aside id="left">Left sidebar</aside>
+            <article id="main">Main contents/body of the page</article>
+            <aside id="right">Right sidebar</aside>
+            <footer id="footer">Page Footer</footer>
+        </div>
+    </body>
 </html>
