--- a/code/Final-Project/index.html
+++ b/code/Final-Project/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Blog</title>
+    <link rel="stylesheet" href="style-common.css">
+    <link rel="stylesheet" href="style.css">
+    <title>YordanosTemesgen: Goal Blogs</title>
   </head>
   <body>
     <div id="page-wrapper">
       <header>
-        <h2>Hello Blog</h2>
+        <logo src></logo>
+        <h1>Hello Blog</h1>
         <nav>
           <a href="/">Home</a>
           <a href="./profile.html">Profile</a>
