--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ transformation that can be translated to realize sub-national, national, regiona
         <div class="section-heading text-center">
             <div class="flex-align d-inline-flex gap-8 mb-16 wow bounceInDown">
                 <span class="text-main-600 text-2xl d-flex"><i class="ph-bold ph-book-open"></i></span>
-                <h5 class="text-main-600 mb-0">AFRIPOD </h5>
+                <h5 class="text-main-600 mb-0">Africa elearning </h5>
             </div>
             <h2 class="mb-24 wow bounceIn">Our Focus Areas</h2>
             <p class=" wow bounceInUp">Local Action for transformation at Scale.</p>
