Done with header

--- a/code/Final-Project/profile.html
+++ b/code/Final-Project/profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-common.css">
+    <link rel="stylesheet" href="shared.css">
     <link rel="stylesheet" href="style-profile.css">
     <title> YordanosTemesgen: Profile Page</title>
 </head>
@@ -14,8 +14,9 @@
         <h1>Hello Blog</h1>
         <nav>
           <a href="/">Home</a>
-          <a href="./profile.html">Profile</a>
-          <a href="/">About</a>
+          <a href="./profile.html">
+            <img src="./img/goal_blogs_logo.svg">
+          </a>
         </nav>
       </header>
     </div>
