failed to set footer to bottm

--- a/code/Final-Project/profile.html
+++ b/code/Final-Project/profile.html
@@ -1,24 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="shared.css">
-    <link rel="stylesheet" href="style-profile.css">
-    <title> YordanosTemesgen: Profile Page</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="shared.css" />
+    <link rel="stylesheet" href="style-profile.css" />
+    <title>YordanosTemesgen: Profile Page</title>
+  </head>
+  <body>
     <div id="page-wrapper">
       <header>
-        <svg></svg>
-        <h1>Hello Blog</h1>
+        <div id="logo">
+          <img src="./img/logo.png" />
+        </div>
+        <div>
+          <span> Welcome to </span>
+          <h1>Goal Blogs</h1>
+        </div>
         <nav>
-          <a href="/">Home</a>
-          <a href="./profile.html">
-            <img src="./img/goal_blogs_logo.svg">
-          </a>
+          <div class="add-new-blog">
+            <a href="/">
+              <img
+                src="./img/plus_white.svg"
+                alt="Create New Blog Plus Buton"
+              />
+            </a>
+          </div>
+          <div class="profile-container">
+            <a href="./profile.html">
+              <img src="./img/goal_blogs_logo.svg" />
+            </a>
+          </div>
         </nav>
       </header>
+
+      <footer>
+        Source: IBT Elearninig, by YordanosTemesgen || github >
+        <a href="https://github.com/yordinia"> Yordinia</a>
+      </footer>
     </div>
   </body>
 </html>
