--- a/code/Final-Project/index.html
+++ b/code/Final-Project/index.html
@@ -33,7 +33,7 @@
           </div>
         </nav>
       </header>
-      <!-- <section>
+      <section>
         <p>Recomended</p>
       </section>
       <section>
@@ -129,7 +129,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
       <footer>
         Source: IBT Elearninig, by YordanosTemesgen || github >
         <a href="https://github.com/yordinia"> Yordinia</a>
