--- a/code/Final-Project/index.html
+++ b/code/Final-Project/index.html
@@ -28,104 +28,103 @@
           </div>
           <div class="profile-container">
             <a href="./profile.html">
-              <img src="./img/goal_blogs_logo.svg">
+              <img src="./img/goal_blogs_logo.svg" />
             </a>
           </div>
         </nav>
       </header>
-      <section>
-        <p>Recomended</p>
-      </section>
-      <section>
+      <div class="blogtext-container">
+        <section id="recommended">
+          <p>Recommended</p>
+          <div class="card">
+            <div class="timestamp">12:01AM Jan 1 / 2025</div>
+            <div class="username">Yordi</div>
+            <div>ሰላም ኢትዮ ቡክ ሪቭው ላይ መጻሕፍትን ለማንበብ፣ ለመግዛትና ሌሎች አንዳንድ....</div>
+          </div>
+        </section>
+        <section id="blog-motivation">
+          <h3>
+            Turn Your <strong>GOALS</strong> <progress></progress>   <span> into <strong> PROGRESS</strong> </span> 
+             <br> <quote>"Share your journey,
+            struggles, and stories as you take daily steps toward your
+            short-term and long-term goals. Celebrate each success and connect
+            with a community that shares the same burning desires and ambitions
+            as you." </quote>
+          </h3>
+        </section>
+      </div>
+      <section id="main">
+        <hr>
         <p>Recent Blog Posts</p>
         <div id="blog-container">
           <div class="card">
-            <img src="sampleimg.jpg" />
-            <div #="timestamp">Time</div>
-            <div #="username"></div>
+            <div class="timestamp">12:01AM Jan 1 / 2025</div>
+            <img src="./img/undraw_personal-goals.svg" />
+            <div class="username"></div>
             <div>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book. It has
-              survived not only fi
+              ሰላም ኢትዮ ቡክ ሪቭው ላይ መጻሕፍትን ለማንበብ፣ ለመግዛትና ሌሎች አንዳንድ መረጃዎችን ለማግኘት የ
+              ጂሜል (Gmail) አድራሻ ያስፈልግዎታል። እባክዎ ቀጥለው ባለው ሊንክ ላይ ክሊክ በማድረግ የGmail
+              አድራሻዎን ይምረጡ ወይም ያስገቡና በቀላሉ አገልግሎታችንን ይጠቀሙ።
             </div>
           </div>
           <div class="card">
-            <img src="sampleimg.jpg" />
-            <div #="timestamp">Time</div>
-            <div #="username"></div>
+            <div class="timestamp">12:01AM Jan 1 / 2025</div>
+            <img src="./img/undraw_personal-goals.svg" />
+            <div class="username"></div>
             <div>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book. It has
-              survived not only fi
+              ሰላም ኢትዮ ቡክ ሪቭው ላይ መጻሕፍትን ለማንበብ፣ ለመግዛትና ሌሎች አንዳንድ መረጃዎችን ለማግኘት የ
+              ጂሜል (Gmail) አድራሻ ያስፈልግዎታል። እባክዎ ቀጥለው ባለው ሊንክ ላይ ክሊክ በማድረግ የGmail
+              አድራሻዎን ይምረጡ ወይም ያስገቡና በቀላሉ አገልግሎታችንን ይጠቀሙ።
             </div>
           </div>
           <div class="card">
-            <img src="sampleimg.jpg" />
-            <div #="timestamp">Time</div>
-            <div #="username"></div>
+            <div class="timestamp">12:01AM Jan 1 / 2025</div>
+            <img src="./img/undraw_personal-goals.svg" />
+            <div class="username"></div>
             <div>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book. It has
-              survived not only fi
+              ሰላም ኢትዮ ቡክ ሪቭው ላይ መጻሕፍትን ለማንበብ፣ ለመግዛትና ሌሎች አንዳንድ መረጃዎችን ለማግኘት የ
+              ጂሜል (Gmail) አድራሻ ያስፈልግዎታል። እባክዎ ቀጥለው ባለው ሊንክ ላይ ክሊክ በማድረግ የGmail
+              አድራሻዎን ይምረጡ ወይም ያስገቡና በቀላሉ አገልግሎታችንን ይጠቀሙ።
             </div>
           </div>
           <div class="card">
-            <img src="sampleimg.jpg" />
-            <div #="timestamp">Time</div>
-            <div #="username"></div>
+            <div class="timestamp">12:01AM Jan 1 / 2025</div>
+            <img src="./img/undraw_personal-goals.svg" />
+            <div class="username"></div>
             <div>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book. It has
-              survived not only fi
+              ሰላም ኢትዮ ቡክ ሪቭው ላይ መጻሕፍትን ለማንበብ፣ ለመግዛትና ሌሎች አንዳንድ መረጃዎችን ለማግኘት የ
+              ጂሜል (Gmail) አድራሻ ያስፈልግዎታል። እባክዎ ቀጥለው ባለው ሊንክ ላይ ክሊክ በማድረግ የGmail
+              አድራሻዎን ይምረጡ ወይም ያስገቡና በቀላሉ አገልግሎታችንን ይጠቀሙ።
             </div>
           </div>
           <div class="card">
-            <img src="sampleimg.jpg" />
-            <div #="timestamp">Time</div>
-            <div #="username"></div>
+            <img src="./img/undraw_personal-goals.svg" />
+            <div class="timestamp">12:01AM Jan 1 / 2025</div>
+            <div class="username"></div>
             <div>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book. It has
-              survived not only five centuries, but also the leap into
-              electronic typesetting, remaining essentially unchanged. It was
-              popularised in the 1960s with the release of Letraset sheets
-              containing Lorem Ipsum passages, and more recently with desktop
-              publishing software like Aldus PageMaker including versions of
-              Lorem Ipsum.
+              ሰላም ኢትዮ ቡክ ሪቭው ላይ መጻሕፍትን ለማንበብ፣ ለመግዛትና ሌሎች አንዳንድ መረጃዎችን ለማግኘት የ
+              ጂሜል (Gmail) አድራሻ ያስፈልግዎታል። እባክዎ ቀጥለው ባለው ሊንክ ላይ ክሊክ በማድረግ የGmail
+              አድራሻዎን ይምረጡ ወይም ያስገቡና በቀላሉ አገልግሎታችንን ይጠቀሙ።
             </div>
           </div>
           <div class="card">
-            <img src="sampleimg.jpg" />
-            <div #="timestamp">Time</div>
-            <div #="username"></div>
+            <div class="timestamp">12:01AM Jan 1 / 2025</div>
+            <img src="./img/undraw_personal-goals.svg" />
+            <div class="username"></div>
             <div>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book. It has
-              survived not only fit
+              ሰላም ኢትዮ ቡክ ሪቭው ላይ መጻሕፍትን ለማንበብ፣ ለመግዛትና ሌሎች አንዳንድ መረጃዎችን ለማግኘት የ
+              ጂሜል (Gmail) አድራሻ ያስፈልግዎታል። እባክዎ ቀጥለው ባለው ሊንክ ላይ ክሊክ በማድረግ የGmail
+              አድራሻዎን ይምረጡ ወይም ያስገቡና በቀላሉ አገልግሎታችንን ይጠቀሙ።
             </div>
           </div>
           <div class="card">
-            <img src="sampleimg.jpg" />
-            <div #="timestamp">Time</div>
-            <div #="username"></div>
+            <div class="timestamp">12:01AM Jan 1 / 2025</div>
+            <img src="./img/undraw_personal-goals.svg" />
+            <div class="username"></div>
             <div>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book. It has
-              survived not only fi
+              ሰላም ኢትዮ ቡክ ሪቭው ላይ መጻሕፍትን ለማንበብ፣ ለመግዛትና ሌሎች አንዳንድ መረጃዎችን ለማግኘት የ
+              ጂሜል (Gmail) አድራሻ ያስፈልግዎታል። እባክዎ ቀጥለው ባለው ሊንክ ላይ ክሊክ በማድረግ የGmail
+              አድራሻዎን ይምረጡ ወይም ያስገቡና በቀላሉ አገልግሎታችንን ይጠቀሙ።
             </div>
           </div>
         </div>
