Done profile page

--- a/code/Final-Project/index.html
+++ b/code/Final-Project/index.html
@@ -19,6 +19,7 @@
         </div>
         <nav>
           <div class="add-new-blog">
+            <p>Create New Blog</p>
             <a href="/">
               <img
                 src="./img/plus_white.svg"
@@ -27,6 +28,7 @@
             </a>
           </div>
           <div class="profile-container">
+            <p>Profile</p>
             <a href="./profile.html">
               <img src="./img/goal_blogs_logo.svg" />
             </a>
