--- a/code/Final-Project/profile.html
+++ b/code/Final-Project/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="shared.css" />
-    <link rel="stylesheet" href="style-profile.css" />
+    <link rel="stylesheet" href="./profile-style.css" />
     <title>YordanosTemesgen: Profile Page</title>
   </head>
   <body>
@@ -19,7 +19,8 @@
         </div>
         <nav>
           <div class="add-new-blog">
-            <a href="/">
+            <p>Go back to Home</p>
+            <a href="./index.html">
               <img
                 src="./img/plus_white.svg"
                 alt="Create New Blog Plus Buton"
@@ -27,13 +28,32 @@
             </a>
           </div>
           <div class="profile-container">
+            <p>Profile</p>
             <a href="./profile.html">
               <img src="./img/goal_blogs_logo.svg" />
             </a>
           </div>
         </nav>
       </header>
-
+      <main>
+        <div class="card">
+          <div class="profile-edit-container">
+            <img src="./img/goal_flag.svg" />
+            <div class="username">Yordi</div>
+            <img src="./img/edit_icon.svg" />
+          </div>
+          <img src="./img/goal_blogs_logo.svg" />
+          <div>
+            ሰላም ኢትዮ ቡክ ሪቭው ላይ መጻሕፍትን ለማንበብ፣ ለመግዛትና ሌሎች አንዳንድ መረጃዎችን ለማግኘት የ ጂሜል
+            (Gmail) አድራሻ ያስፈልግዎታል። እባክዎ ቀጥለው ባለው ሊንክ ላይ ክሊክ በማድረግ የGmail አድራሻዎን
+            ይምረጡ ወይም ያስገቡና በቀላሉ አገልግሎታችንን ይጠቀሙ።
+            <br />
+            ሰላም ኢትዮ ቡክ ሪቭው ላይ መጻሕፍትን ለማንበብ፣ ለመግዛትና ሌሎች አንዳንድ መረጃዎችን ለማግኘት የ ጂሜል
+            (Gmail) አድራሻ ያስፈልግዎታል። እባክዎ ቀጥለው ባለው ሊንክ ላይ ክሊክ በማድረግ የGmail አድራሻዎን
+            ይምረጡ ወይም
+          </div>
+        </div>
+      </main>
       <footer>
         Source: IBT Elearninig, by YordanosTemesgen || github >
         <a href="https://github.com/yordinia"> Yordinia</a>
