feat: add tailwind dependencies

--- a/code/00_assignments/00_htmlcss/04_final_project/index.html
+++ b/code/00_assignments/00_htmlcss/04_final_project/index.html
@@ -7,10 +7,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Blog, Blog-Page, Blog-Home, Home">
         <meta name="developer" content="Ibukunola, Mareola-Mabs, Mareola, Mareola-Official">
-        <link rel="stylesheet" type="text/css" href="">
+        <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
         <link rel="icon" type="image/x-icon" href="">
     </head>
     <body>
+
+
 
 
 
