--- a/code/index2.html
+++ b/code/index2.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <link href="style.css" rel="stylesheet" type="text/css" />
+        <link href="style2.css" rel="stylesheet" type="text/css" />
         <title>Flexbox Challenge</title>
     </head> Faith munyalo
 
