--- a/code/00_assignments/00_htmlcss/04_final_project/index.html
+++ b/code/00_assignments/00_htmlcss/04_final_project/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Blog, Blog-Page, Blog-Home, Home">
         <meta name="developer" content="Ibukunola, Mareola-Mabs, Mareola, Mareola-Official">
         <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-        <link rel="icon" type="image/x-icon" href="">
+        <link rel="icon" type="image/x-icon" href="./assets/images/title.ico">
     </head>
     <body class="bg-white p-0 m-0 box-border font-sans select-none overflow-x-hidden">
 
